# spln-2223

./: README.md
TPC1/: README.md  tpc1_txt.py  tpc1_xml.py
TPC1/data/: medicina_clean.txt
TPC2/: README.md  tpc2_trataDic.py
TPC2/aula2/: lex.py  notes.md  parserSemantico.py
TPC2/parser/: parser.out  parsetab.py  plyParser.py
TPC3/: README.md  newFormats.py
TPC4/: README.md  hp.txt
TPC4/data/: Harry_Potter_e_A_Pedra_Filosofal.txt  notes.md
TPC4/hp/: tokenizadorspln.py
TPC5/: README.md
TPC5/output/: output.txt
TPC5/tokenizer/: LICENSE  pyproject.toml
TPC5/tokenizer/tokenizerspln/: __init__.py
