[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tokenizerspln"
authors = [{name = "Miguel Martins", email = "miguelammartins11@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["spacy"]
readme = "tokenizer.md"

[project.scripts]
tok = "tokenizerspln:tokenizer"